networking/04-traffic-splitting/cananry-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-app-canary
  namespace: app-space
spec:
  parentRefs:
  - name: infra-gateway
    namespace: infra-gateway
  rules:
  - backendRefs:
    - name: svc-v1
      port: 80
      weight: 90
    - name: svc-v2
      port: 80
      weight: 10
